--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
 
+    <script src="rectangle.js" type="text/javascript"></script>
+    <script src="frog.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
 
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
