--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
 
     <script src="rectangle.js" type="text/javascript"></script>
+    <script src="obstacle.js" type="text/javascript"></script>
     <script src="frog.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
 
