--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <script src="rectangle.js" type="text/javascript"></script>
     <script src="obstacle.js" type="text/javascript"></script>
+    <script src="safearea.js" type="text/javascript"></script>
+    <script src="platform.js" type="text/javascript"></script>
     <script src="row.js" type="text/javascript"></script>
     <script src="frog.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
