--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="row.js" type="text/javascript"></script>
     <script src="frog.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
+    <script src="heart.js" type="text/javascript"></script>
 
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
   </head>
